# aark

./: LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: publish_pypi.yml  test.yml
aark/: __init__.py
aark/ncm/: __init__.py  sched.py
